--- a/Quiz_app/index.html
+++ b/Quiz_app/index.html
@@ -15,26 +15,26 @@
     </div>
     <div class="quiz-box custom-box ">
         <div class="question-number">
-            Question 1 of 5
+            <!-- Question 1 of 5 -->
         </div>
         <div class="question-text">
-            Which month comes right before September ?
+            <!-- Which month comes right before September ? -->
         </div>
         <div class="option-container">
-            <div class="option">July</div>
+            <!-- <div class="option">July</div>
             <div class="option">August</div>
             <div class="option">October</div>
-            <div class="option">November</div>
+            <div class="option">November</div> -->
         </div>
         <div class="next-queston-btn">
-            <button type="button" class="btn">Next</button>
+            <button type="button" class="btn" onclick="next()">Next</button>
         </div>
         <div class="answers-indicator">
+            <!-- <div></div>
             <div></div>
             <div></div>
             <div></div>
-            <div></div>
-            <div></div>
+            <div></div> -->
         </div>
     </div>
     <div class="result-box custom-box hide">
@@ -69,6 +69,7 @@
         <button type="button" class="btn">Go To Home</button>
     </div>
 
-    <script src="script.js"></script>
+    <script src="js/question.js"></script>
+    <script src="js/app.js"></script>
 </body>
 </html>
