--- a/ConnectEcole/index.html
+++ b/ConnectEcole/index.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/all.css" type="text/css">
     <link rel="stylesheet" href="css/style.css" type="text/css">
-    <link rel="stylesheet" href="css/skins/pink.css" type="text/css">
+    <link rel="stylesheet" href="css/skins/blue.css" type="text/css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://kit.fontawesome.com/a891500f8c.js" crossorigin="anonymous"></script>
-    <title>Document</title>
+    <title>ConnectedEcole</title>
 </head>
 <body>
     <!-------- Main container start---->
@@ -22,7 +22,7 @@
             </div>
             <div class="aside-inner">
                 <div class="logo">
-                    <a href="#">IMG</a>
+                    <a href="#">logo</a>
                 </div>
                 <!-- Nav -->
                 <ul class="nav">
